--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,102 +1,80 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>MusicGallery</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-   
-    <%= javascript_importmap_tags %>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  </head>
 
-  <body>
+<head>
+  <title>MusicGallery</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 
+  <%= javascript_importmap_tags %>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-  <!---navigation bar starts--->
-<nav class=" navbar navbar-expand-lg sticky bg-white">
-    <div class="container-fluid bg-dark">
-        <div class="mx-2">
-        <a class="nav-link active d-flex align-items-center" aria-current="page"><i class="fa fa-volume-up fa-2x"
-        style='color:green'></i> <h1 class="text-success">Spotmusic</h1></a>
-        </div>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <%= stylesheet_link_tag "application", media:"all"%>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
-       
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+<body>
 
-        <div class="collapse navbar-collapse navbar_list" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0 nav_index d-flex align-items-center  color text-decoration-none">
-                <li class="nav-item d-flex align-items-center  text-dark mx-auto my-3 py-0 text-decoration-none">
-                    <div class="d-flex  mx-lg-3">
-                    <i><b><%= link_to "All songs", root_path,style: "text-decoration:none;color:white"%></b></i>
-
-                    </div>
-
-                </li>
-
-                <li class="nav-item d-flex align-items-center  text-dark mx-auto my-3 py-0 text-decoration-none">
-                <div class="d-flex  mx-lg-3">
-                <i><b><%= link_to "my music", musics_path,style: "text-decoration:none;color:white"%></b></i>
-
-                </div>
-
-            </li>
-
-        
-
-            
-                <li class="nav-item text-dark mx-lg-3 my-3 py-0 d-flex text-decoration-none">
-                 <i><b><%= link_to "Upload",new_music_path , style: "text-decoration:none;color:white"%></b></i>
-                </li>
-               
-                
-             <% if user_signed_in? %>
-             <div class="color">
-             <li class="nav-item ms-5  d-flex">
-              <i><b> <%= link_to "Edit", edit_user_registration_url , style: "text-decoration:none;color:white"  %></b></i>
-             </li>
-            </div>
-            <div class="color">
-             <li class="nav-item text-dark  mx-lg-3 my-3 py-0 d-flex">
-             <i><b><%= link_to "Log Out", destroy_user_session_url , style: "text-decoration:none;color:white" , data: {
-                turbo_method: :delete,
-                turbo_confirm: "Log Out ?"
-              } %></b></i>
+  <nav class="navbar navbar-expand-lg bg-dark">
+    <div class="container-fluid">
+      <div class="logo nav_logo"><%= image_tag 'music.gif',style: "height:5rem" %></div>
+      <%= link_to "Spotmusic", root_path, class: "navbar-brand fs-3 m-2 text-white"%>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item m-2">
+            <%= link_to "All songs", root_path, class: "nav-link text-white fs-5"%>
+            <%# <a class="nav-link" aria-current="page" href="">all songs</a> %>
           </li>
-          </div>
 
+          <li class="nav-item m-2">
+            <%= link_to "my music", musics_path, class: "nav-link text-white fs-5"%>
+            <%# <a class="nav-link" href="#">My Albums</a> %>
+          </li>
 
-            </ul>
-        <% else %>
-            
-            <form class="d-flex" role="search">
-        <div >
-            <i><b><%= link_to "login", new_user_session_path , style: "text-decoration:none;color:white" %></b></i>
-        </div>
-        <div class="mx-3">
+          <li class="nav-item m-2">
+            <%= link_to "Upload",new_music_path, class: "nav-link text-white fs-5"%>
+            <%# <a class="nav-link" href="#">Upload</a> %>
+          </li>
+        </ul>
 
-            <i><b ><%= link_to "sign up",new_user_registration_path  , style: "text-decoration:none;color:white"     %></b></i> 
-         </div>
-            </form>
- 
-        <% end %>
+        <!--====login/logout====-->
 
-        
-        </div>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <%if user_signed_in?%>
+          <li class="nav-item m-2">
+            <%= link_to "Edit Profile", edit_user_registration_path, class: "nav-link btn btn-light btn-small"%>
+          </li>
+          <li class="nav-item m-2">
+            <%= link_to "SignOut", destroy_user_session_path, data: { "turbo-method": :delete }, class: "nav-link btn btn-light btn-small"%>
+          </li>
+          <%else%>
+          <li class="nav-item m-2">
+            <%= link_to "SignUp", new_user_registration_path, class: "nav-link btn btn-light btn-small"%>
+          </li>
+          <li class="nav-item m-2">
+            <%= link_to "SignIn", user_session_path, class: "nav-link btn btn-light btn-small"%>
+          </li>
+          <%end%>
+
+        </ul>
+
+      </div>
     </div>
-</nav>
-<!--navigation lasts-->
+  </nav>
 
-
-  <% if notice %> <p class="alert alert-success"><%= notice %></p> <% end %> 
+  <% if notice %> <p class="alert alert-success"><%= notice %></p> <% end %>
   <% if alert %> <p class="alert alert-danger"><%= alert %></p> <% end %>
-    <%= yield %>
-  </body>
+  <%= yield %>
+</body>
+
 </html>
