--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,15 +75,9 @@
   <% if notice %> <p class="alert alert-success"><%= notice %></p> <% end %>
   <% if alert %> <p class="alert alert-danger"><%= alert %></p> <% end %>
   <%= yield %>
-<footer class="bg-light text-center text-lg-start fixed">
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2020 Copyright:
-    <a class="text-dark" href="http://localhost:3000/musics">Spotmusic.com</a>
-  </div>
-  <!-- Copyright -->
-</footer>
 
-</body>
+<%=render"layouts/footer"%>
+
+  </body>
 
 </html>
